--- a/render.yaml
+++ b/render.yaml
@@ -1,26 +1,32 @@
 # render.yaml
+YAML
 services:
+  # Основной сервис нашего бота
   - type: web
     name: manus-analytics-bot
     env: python
-    plan: free
+    plan: free # Используем бесплатный тариф
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn -c gunicorn_config.py main:app"
     healthCheckPath: /health
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.12
-      - key: BOT_TOKEN
-        fromSecret: BOT_TOKEN
-      - key: ADMIN_ID
-        fromSecret: ADMIN_ID
+      # ВАЖНО: BOT_TOKEN и ADMIN_ID удалены. Вы добавите их вручную в UI.
       - key: DATABASE_URL
         fromService:
           type: pserv
           name: manus-db
-          property: connectionString
+          property: connectionString # Это свойство будет работать с Docker-сервисом
 
-  - type: pserv
+  # Сервис базы данных MongoDB
+  - type: pserv # pserv = Private Service
     name: manus-db
-    env: mongo
+    env: docker # Указываем, что используем Docker
+    repo: https://hub.docker.com/_/mongo # Ссылка на официальный образ MongoDB
     plan: free
+    # Диск для хранения данных, чтобы они не терялись при перезапуске
+    disk:
+      name: mongo-data
+      mountPath: /data/db
+      sizeGB: 1
