--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 # .env - Project Secrets and Configuration
 BOT_TOKEN="8231615776:AAGTerScGjnlWymGBOxjoBk-33i_Yok1rGQ"
 ADMIN_USER_ID="858780242"
-MONGO_URI="mongodb+srv://kojihov_db_user:Zz886311Qq@manus-analytics-cluster.77njcyy.mongodb.net/
-"
+MONGO_URI="mongodb+srv://kojihov_db_user:Zz886311Qq@manus-analytics-cluster.77njcyy.mongodb.net/"
 MONGO_DB_NAME="manus_analytics_db"
 LOG_LEVEL="INFO"
