--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     startCommand: "gunicorn main:app"
     autoDeploy: true
     envVars:
-      - fromGroup: vitador-env # Используем группу переменных
+      - fromGroup: custom1 # Используем актуальную группу переменных
 
   # Воркер для запуска самого Telegram-бота
   - type: worker
@@ -19,4 +19,4 @@ services:
     startCommand: "python bot.py"
     autoDeploy: true
     envVars:
-      - fromGroup: custom1 # Используем ту же группу переменных
+      - fromGroup: custom1 # Используем ту же актуальную группу переменных
