--- a/render.yaml
+++ b/render.yaml
@@ -13,6 +13,7 @@ services:
     name: vitador-bot
     env: python
     plan: free
+    healthCheckPath: /  # disable Render health checks for this worker
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python run_bot.py"
     autoDeploy: true
