feat(deploy): create dedicated worker-only deployment branch

--- a/render.yaml
+++ b/render.yaml
@@ -1,22 +1,13 @@
+# This Blueprint describes ONLY the bot worker.
 services:
-  # 1. The Web Service (The "Keep-Alive" Dummy)
-  - type: web
-    name: vitador-web
-    env: python
-    plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app"
-    autoDeploy: true
-    envVars:
-      - fromGroup: custom1
-
-  # 2. The Worker (The Real Bot)
   - type: worker
-    name: manus-analytics-bot
+    name: manus-analytics-bot-worker  # New, clear name
     env: python
     plan: free
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python run_bot.py"  # The correct command
+    startCommand: "python run_bot.py"
     autoDeploy: true
     envVars:
-      - fromGroup: custom1
+      - key: PYTHON_VERSION
+        value: 3.11.5
+      # BOT_TOKEN, ADMIN_ID, DATABASE_URL must be set in Render Environment
