--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,6 @@
-# This Blueprint describes ONLY the bot worker.
 services:
   - type: worker
-    name: manus-analytics-bot-worker  # New, clear name
+    name: manus-analytics-bot
     env: python
     plan: free
     buildCommand: "pip install -r requirements.txt"
@@ -10,4 +9,3 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.5
-      # BOT_TOKEN, ADMIN_ID, DATABASE_URL must be set in Render Environment
